--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,6 @@
  *= require_tree .
  *= require_self
  */
- @import "bootstrap-sprokets";
+
+ @import "bootstrap-sprockets";
  @import "bootstrap";
