--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,6 +8,7 @@
         <td>序号</td>
         <td>题目</td>
         <td>概述</td>
+        <td>创建者</td>
       </tr>
     </thead>
     <tbody>
@@ -16,6 +17,7 @@
           <td>#</td>
           <td><%= link_to(group.title, group_path(group)) %></td>
           <td><%= group.description %></td>
+          <td> <%= group.user.email %></td>
           <td>
               <%= link_to("编辑", edit_group_path(group), class: "btn btn-sm btn-default")%>
               <%= link_to("删除", group_path(group),    class: "btn btn-sm btn-default",
