--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,12 @@
 <div class="col-md-12">
   <div classs="group">
+
+    <%= link_to("发表文章", new_group_post_path(@group), class: "btn btn-default pull-right")%>
+
     <% if current_user && current_user == @group.user %>
       <%= link_to("修改",edit_group_path(@group), class: "btn btn-primary pull-right")%>
     <% end %>
+
   </div>
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
