--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -18,6 +18,8 @@
                          <b class="caret"></b>
                      </a>
                      <ul class="dropdown-menu">
+                       <li> <%= link_to("我的群组", account_groups_path) %></li>
+                       <li class="divider"> </li>
                          <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
                      </ul>
                    </li>
